force-app/main/default/objects/Account/fields/Additional_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone__c</fullName>
    <description>To Capture the Additional Phone Number</description>
    <inlineHelpText>Give Any Additional Phone Number</inlineHelpText>
    <label>Additional Phone</label>
    <type>Phone</type>
</CustomField>