force-app/main/default/objects/Account/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <description>Additional email</description>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>