force-app/main/default/objects/Account/fields/Email_3__c.field-meta.xml
<CustomField>
    <fullName>Email_3__c</fullName>
    <description>Additional Email</description>
    <label>Email 3</label>
    <type>Email</type>
</CustomField>