force-app/main/default/objects/Account/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>