force-app/main/default/objects/Account/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>