force-app/main/default/objects/Account/validationRules/Channel_Partner_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_Partner_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name == &apos;Channel Partner&apos; &amp;&amp; ISBLANK(Phone) &amp;&amp; ISBLANK(Rera_Number__c) &amp;&amp; ISBLANK(Email__c)</errorConditionFormula>
    <errorMessage>For Channel Partner creation one of following things are required:
Phone, Email, Rera Number</errorMessage>
</ValidationRule>