force-app/main/default/objects/Account/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Additional_Phone__c)),
NOT(REGEX(Additional_Phone__c , &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Additional_Phone__c</errorDisplayField>
    <errorMessage>Please Enter a valid Phone Number , Phone number must contain exactly 10 digits and no special characters.</errorMessage>
</ValidationRule>